--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+===gradle 2.1===
+-refined settings: modifiable teams
+-bug fix: [1/chembio/3] [1/chembio/4] solution mismatch
+-finished W^6[1/physmath/1_1]
+-finished F^7[1/physmath/2_1]
+
 ===gradle 2.0===
 -added settings (WIP)
 -removed 飛行的原理1[1/physmath/1] 飛行的原理2[1/physmath/2]; added W^6[1/physmath/1_1] F^7[1/physmath/2_1]
