--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,14 @@
 visit https://hackmd.io/5Tg4rqrBQSaoW38Ru8oBFA?view for more info
 
+===gradle_5.0=== 8/9
+-bug fix: 風紀股長阿瓜[2/nehs/3] title mismatch
+-reworked scoring
+-added dependence for snake
+
+
+===gradle_4.3=== 8/9 07am
+-refined snake UI
+
 ===gradle_4.2=== 8/8 26pm
 -added minesweeper[2/avocado/?] (WIP)
 -refined snake[2/avocado/?]
