--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,20 @@
 visit https://hackmd.io/5Tg4rqrBQSaoW38Ru8oBFA?view for more info
 
-===gradle_5.0=== 8/9
+===gradle_5.0=== 8/9 25pm
+-new feature: no need for backspace now
+-new feature: adjustable timing
+-new feature: adjustable button font size
 -bug fix: 風紀股長阿瓜[2/nehs/3] title mismatch
 -reworked scoring
 -added dependence for snake
+-added 地中海風情[2/nehs2/2]
+-added 公車奇遇記[2/nehs2/3]
+-added 小杓的夢想[2/nehs2/4]
+-added 皇帝企鵝找媽媽[2/nehs2/5]
+-added [2/nehs2/6] (WIP)
+-removed 需要四章圖的歷史[1/socio/5]; added 孝順的彼得[1/socio/5_1]
+-removed p不發音[1/lit/4]; added 台語[1/lit/4_1]
+-modified 八寶粥vs.鱷魚[1/physmat/6]
 
 
 ===gradle_4.3=== 8/9 07am
