--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,18 @@
 visit https://hackmd.io/5Tg4rqrBQSaoW38Ru8oBFA?view for more info
 
+===gradle_8.0=== 8/19 24pm
+-reworked GUI
+-added info page
+
+
+
+===gradle_7.3=== 8/15 22pm
+-bug fix: matching game return button
+-bug fix: minesweeper proper exit
+-cleaned hardcoded parameters: teams, categories, problems per category
+
 ===gradle_7.2=== 8/14 12pm
--
+-various bug fixes
 
 ===gradle_7.1=== 8/13 13pm
 -various bug fixes
